Fix front page extracts

--- a/content/post/how-ksql-handles-case.adoc
+++ b/content/post/how-ksql-handles-case.adoc
@@ -13,6 +13,8 @@ categories:
 
 https://www.confluent.io/ksql[KSQL] is generally case-sensitive. Very sensitive, at times ;-)
 
+<!--more-->
+
 == Topics
 
 Topics need to be quoted, always. 
