--- a/content/post/ksql-rest-api-cheatsheet.adoc
+++ b/content/post/ksql-rest-api-cheatsheet.adoc
@@ -14,6 +14,9 @@ categories:
 
 Full reference is https://docs.confluent.io/current/ksql/docs/developer-guide/api.html[here]
 
+<!--more-->
+
+
 * https://docs.confluent.io/current/ksql/docs/developer-guide/api.html#run-a-query-and-stream-back-the-output[Run a query]
 +
 {{< highlight shell >}}
