--- a/content/post/schema-registry-cheatsheet.adoc
+++ b/content/post/schema-registry-cheatsheet.adoc
@@ -16,6 +16,9 @@ categories:
 
 The https://docs.confluent.io/current/schema-registry/docs/index.html[Schema Registry] support a https://docs.confluent.io/current/schema-registry/docs/api.html[REST API] for finding out information about the schemas within it. Here's a quick cheatsheat with REST calls that I often use. 
 
+<!--more-->
+
+
 * https://docs.confluent.io/current/schema-registry/docs/api.html#get--subjects[List 'subjects' (topics)]
 +
 {{< highlight shell >}}
