Updated day 10, 11, added day 12

--- a/content/post/smt10_replace.adoc
+++ b/content/post/smt10_replace.adoc
@@ -26,7 +26,7 @@ The https://docs.confluent.io/platform/current/connect/transforms/replacefield.h
 
 It can be used in both a source and sink connector depending on requirements. 
 
-{{< youtube TODO >}}
+{{< youtube I0nd3GH_VzY >}}
 
 _(https://cwiki.apache.org/confluence/display/KAFKA/KIP-629%3A+Use+racially+neutral+terms+in+our+codebase[KIP-629] has started to be implemented in Apache Kafka 2.7. If you are using an earlier version then you will have to use `blacklist` and `whitelist` in place of `exclude` and `include` respectively)_
 
