--- a/content/post/smt11_filter.adoc
+++ b/content/post/smt11_filter.adoc
@@ -28,7 +28,7 @@ As part of Apache Kafka, Kafka Connect ships with pre-built Single Message Trans
 
 It can be used in both a source and sink connector depending on requirements. 
 
-{{< youtube TODO >}}
+{{< youtube Cojm4Mkf6to >}}
 
 == Conditionally renaming fields based on the topic name
 
