Move Go series include inline

--- a/content/post/kafka-and-go-01.adoc
+++ b/content/post/kafka-and-go-01.adoc
@@ -56,4 +56,29 @@ You can press Ctrl and click on a function or type and it will take you through 
 
 image::/images/2020/07/vscode03.gif[]
 
-include::/Users/rmoff/git/rmoff-blog/content/go-series.adoc[]
+== 📺 More Episodes…
+
+* Kafka and Go
+** link:/2020/07/08/learning-golang-some-rough-notes-s02e00-kafka-and-go/[S02E00 - Kafka and Go]
+** link:/2020/07/08/learning-golang-some-rough-notes-s02e01-my-first-kafka-go-producer/[S02E01 - My First Kafka Go Producer]
+** link:/2020/07/10/learning-golang-some-rough-notes-s02e02-adding-error-handling-to-the-producer/[S02E02 - Adding error handling to the Producer]
+** link:/2020/07/14/learning-golang-some-rough-notes-s02e03-kafka-go-consumer-channel-based/[S02E03 - Kafka Go Consumer (Channel-based)]
+** link:/2020/07/14/learning-golang-some-rough-notes-s02e04-kafka-go-consumer-function-based/[S02E04 - Kafka Go Consumer (Function-based)]
+** link:/2020/07/15/learning-golang-some-rough-notes-s02e05-kafka-go-adminclient/[S02E05 - Kafka Go AdminClient]
+** link:/2020/07/15/learning-golang-some-rough-notes-s02e06-putting-the-producer-in-a-function-and-handling-errors-in-a-go-routine/[S02E06 - Putting the Producer in a function and handling errors in a Go routine]
+** link:/2020/07/16/learning-golang-some-rough-notes-s02e07-splitting-go-code-into-separate-source-files-and-building-a-binary-executable/[S02E07 - Splitting Go code into separate source files and building a binary executable]
+** link:/2020/07/17/learning-golang-some-rough-notes-s02e08-checking-kafka-advertised.listeners-with-go/[S02E08 - Checking Kafka advertised.listeners with Go]
+** link:/2020/07/23/learning-golang-some-rough-notes-s02e09-processing-chunked-responses-before-eof-is-reached/[S02E09 - Processing chunked responses before EOF is reached]
+* Learning Go
+** link:/2020/06/25/learning-golang-some-rough-notes-s01e00/[S01E00 - Background]
+** link:/2020/06/25/learning-golang-some-rough-notes-s01e01-pointers/[S01E01 - Pointers]
+** link:/2020/06/25/learning-golang-some-rough-notes-s01e02-slices/[S01E02 - Slices]
+** link:/2020/06/29/learning-golang-some-rough-notes-s01e03-maps/[S01E03 - Maps]
+** link:/2020/06/29/learning-golang-some-rough-notes-s01e04-function-closures/[S01E04 - Function Closures]
+** link:/2020/06/30/learning-golang-some-rough-notes-s01e05-interfaces/[S01E05 - Interfaces]
+** link:/2020/07/01/learning-golang-some-rough-notes-s01e06-errors/[S01E06 - Errors]
+** link:/2020/07/01/learning-golang-some-rough-notes-s01e07-readers/[S01E07 - Readers]
+** link:/2020/07/02/learning-golang-some-rough-notes-s01e08-images/[S01E08 - Images]
+** link:/2020/07/02/learning-golang-some-rough-notes-s01e09-concurrency-channels-goroutines/[S01E09 - Concurrency (Channels, Goroutines)]
+** link:/2020/07/03/learning-golang-some-rough-notes-s01e10-concurrency-web-crawler/[S01E10 - Concurrency (Web Crawler)]
+
