Fix includes to not use hardcoded local path (use hardcoded remote path instead)

--- a/content/post/kafka-and-go-01.adoc
+++ b/content/post/kafka-and-go-01.adoc
@@ -32,7 +32,7 @@ With that done, we can run our first Kafka Go code! Make sure you've got a local
 
 [source,go]
 ----
-include::/Users/rmoff/git/rmoff-blog/content/code/go/kafka/producer01/producer01.go[]
+include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/content/code/go/kafka/producer01/producer01.go[]
 ----
 
 When you run this, you get a message written to a Kafka topic! 
