--- a/content/post/kafka-and-go-03.adoc
+++ b/content/post/kafka-and-go-03.adoc
@@ -87,7 +87,7 @@ The full code looks like this:
 
 [source,go]
 ----
-include::/Users/rmoff/git/rmoff-blog/content/code/go/kafka/consumer01/consumer01.go[]
+include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/content/code/go/kafka/consumer01/consumer01.go[]
 ----
 
 image::/images/2020/07/consumer01.gif[]
