--- a/content/post/kafka-and-go-04.adoc
+++ b/content/post/kafka-and-go-04.adoc
@@ -49,7 +49,7 @@ The full code looks like this:
 
 [source,go]
 ----
-include::/Users/rmoff/git/rmoff-blog/content/code/go/kafka/consumer02/consumer02.go[]
+include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/content/code/go/kafka/consumer02/consumer02.go[]
 ----
 
 I run it using a link:/code/go/kafka/consumer02/docker-compose.yml[Docker Compose] which also runs a data generator in Kafka Connect populating a topic for the consumer to read from. When I shut down Kafka Connect the data generator stops, the consumer reads to the end of the topic, and exits:  
