--- a/content/post/kafka-and-go-05.adoc
+++ b/content/post/kafka-and-go-05.adoc
@@ -120,7 +120,7 @@ The https://docs.confluent.io/5.5.1/clients/confluent-kafka-go/index.html#AdminC
 
 [source,go]
 ----
-include::/Users/rmoff/git/rmoff-blog/content/code/go/kafka/adminclient01/adminclient.go[]
+include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/content/code/go/kafka/adminclient01/adminclient.go[]
 ----
 
 The output looks like this: 
