--- a/content/post/kafka-and-go-06.adoc
+++ b/content/post/kafka-and-go-06.adoc
@@ -198,7 +198,7 @@ Now, maybe the code in your function will catch an error as a side effect of the
 
 [source,go]
 ----
-include::/Users/rmoff/git/rmoff-blog/content/code/go/kafka/go_routine_errors/go_routine_errors.go[]
+include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/content/code/go/kafka/go_routine_errors/go_routine_errors.go[]
 ----
 
 When run this looks like: 
@@ -259,7 +259,7 @@ Here's the full code, and a link:/code/go/kafka/producer_function/docker-compose
 
 [source,go]
 ----
-include::/Users/rmoff/git/rmoff-blog/content/code/go/kafka/producer_function/producer_function.go[]
+include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/content/code/go/kafka/producer_function/producer_function.go[]
 ----
 
 == 📺 More Episodes…
