--- a/content/post/kafka-and-go-02.adoc
+++ b/content/post/kafka-and-go-02.adoc
@@ -304,7 +304,7 @@ or failure:
 
 [source,go]
 ----
-include::/Users/rmoff/git/rmoff-blog/content/code/go/kafka/producer02/producer02.go[]
+include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/content/code/go/kafka/producer02/producer02.go[]
 ----
 
 
