--- a/content/post/smt9_cast.adoc
+++ b/content/post/smt9_cast.adoc
@@ -33,7 +33,7 @@ The https://docs.confluent.io/platform/current/connect/transforms/cast.html[`Cas
 
 https://github.com/confluentinc/demo-scene/blob/master/kafka-connect-single-message-transforms/day9.adoc[👾 Demo code]
 
-== Changing field data types as they pass through Kafka Connect
+== Changing the data type of fields as they pass through Kafka Connect
 
 Because we're developers who appreciate the finer things in life, including https://www.confluent.io/blog/schemas-contracts-compatibility/[the importance of schemas], we're using a suitable serialisation method for our data - Avro, Protobuf, or JSON Schema. The beauty of this is that the full schema is persisted at ingest, and available for any consumer. It also means that we want to make sure that the schema is correct for the data. 
 
