--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,6 @@
 = rmoff's Blog (source)
 
+image::https://github.com/rmoff/rmoff-blog/workflows/GitHub%20Pages/badge.svg?branch=master[]
+
 This is the source for https://rmoff.net, built using Hugo and hosted via GitHub pages.
+
