Add note re. schedule

--- a/content/post/scheduling-hugo-builds-on-githubpages.adoc
+++ b/content/post/scheduling-hugo-builds-on-githubpages.adoc
@@ -74,7 +74,7 @@ include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/.github/workf
 
 Points to note: 
 
-* The action will trigger every ten minutes: 
+* The action will trigger every ten minutes (in practice this seems to not be honoured and instead seems to run every 40 minutes or so instead, maybe because I'm on the GitHub free plan?): 
 +
 [source,yaml]
 ----
