--- a/content/post/smt12_community.adoc
+++ b/content/post/smt12_community.adoc
@@ -16,7 +16,7 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-Apache Kafka ships with https://kafka.apache.org/documentation/#connect_included_transformation[many Single Message Transformations included] - but the great thing about it being an https://kafka.apache.org/26/javadoc/org/apache/kafka/connect/transforms/Transformation.html[open API] is that people can, and do, write their own transformations. Many of these are shared with the wider community, and in this final installment of the series I'm going to look at some of the transformations written by Jeremy Custenborder and available in https://jcustenborder.github.io/kafka-connect-documentation/projects/kafka-connect-transform-common[`kafka-connect-transform-common`] which can be https://www.confluent.io/hub/jcustenborder/kafka-connect-transform-common[downloaded and installed from Confluent Hub] (or built from https://github.com/jcustenborder/kafka-connect-transform-common[source], if you like that kind of thing). Also check out the XML transformation by the same author, which link:/2020/10/01/ingesting-xml-data-into-kafka-option-2-kafka-connect-plus-single-message-transform/[I've written about previously]. 
+Apache Kafka ships with https://kafka.apache.org/documentation/#connect_included_transformation[many Single Message Transformations (SMT) included] - but the great thing about it being an https://kafka.apache.org/26/javadoc/org/apache/kafka/connect/transforms/Transformation.html[open API] is that people can, and do, write their own transformations. Many of these are shared with the wider community, and in this final installment of the series I'm going to look at some of the transformations written by Jeremy Custenborder and available in https://jcustenborder.github.io/kafka-connect-documentation/projects/kafka-connect-transform-common[`kafka-connect-transform-common`] which can be https://www.confluent.io/hub/jcustenborder/kafka-connect-transform-common[downloaded and installed from Confluent Hub] (or built from https://github.com/jcustenborder/kafka-connect-transform-common[source], if you like that kind of thing). Also check out the XML transformation by the same author, which link:/2020/10/01/ingesting-xml-data-into-kafka-option-2-kafka-connect-plus-single-message-transform/[I've written about previously]. 
 
 
 {{< youtube Z7k_6vGRrkc >}}
@@ -57,15 +57,15 @@ mysql> show tables;
 | Day12Sys01     |
 ----
 
-== Use the timestamp of a field as the message timestamp
+== Add the timestamp of a field to the message topic
 
 A nice little triumvirate of transformations here, which use the _timestamp in a field of a message_ to modify the topic name. 
 
 The three steps are: 
 
-1. link:day8.adoc[TimestampConverter] to transform the field from a string to a Timestamp (not necessary if it already is)
-2. https://jcustenborder.github.io/kafka-connect-documentation/projects/kafka-connect-transform-common/transformations/ExtractTimestamp.html[ExtractTimestamp] to set the timestamp of the Kafka message to the value of the specified field
-3. link:day7.adoc[TimestampRouter] to modify the topic name to include the timestamp components required
+1. link:day8.adoc[TimestampConverter] to transform the field from a string to a Timestamp (not necessary if it already is). _Ships with Apache Kafka._
+2. https://jcustenborder.github.io/kafka-connect-documentation/projects/kafka-connect-transform-common/transformations/ExtractTimestamp.html[ExtractTimestamp] to set the timestamp of the Kafka message to the value of the specified field. _Custom SMT from Jeremy Custenborder_.
+3. link:day7.adoc[TimestampRouter] to modify the topic name to include the timestamp components required. _Ships with Apache Kafka._
 
 [source,javascript]
 ----
