--- a/content/post/smt12_community.adoc
+++ b/content/post/smt12_community.adoc
@@ -57,7 +57,7 @@ mysql> show tables;
 | Day12Sys01     |
 ----
 
-== Add the timestamp of a field to the message topic
+== Add the timestamp of a field to the topic name
 
 A nice little triumvirate of transformations here, which use the _timestamp in a field of a message_ to modify the topic name. 
 
