--- a/content/post/smt4_regex.adoc
+++ b/content/post/smt4_regex.adoc
@@ -67,7 +67,7 @@ This is using RegEx to match the prefix `mysql-02-` and to store everything else
 
 To learn more about RegEx, and experiment with patterns, check out the excellent https://regexr.com/5i7cc[RegExr.com]
 
-== Changing the object name to which a source connector writes
+== Changing the object name to which a sink connector writes
 
 Many sink connectors will use the topic name as the basis for the naming of the target object that it populates. The JDBC Sink connector creates a table named after the topic. The Elasticsearch sink connector creates an index named after the topic. And so on. 
 
