--- a/content/post/topic-creation-config-override.adoc
+++ b/content/post/topic-creation-config-override.adoc
@@ -1,5 +1,5 @@
 ---
-draft: true
+draft: false
 title: 'Defining custom topic properties with Kafka Connect source connectors'
 date: "2021-01-06T12:18:51Z"
 image: "/images/2021/01/IMG_8408.jpeg"
