--- a/content/post/topic-creation-config-override.adoc
+++ b/content/post/topic-creation-config-override.adoc
@@ -115,7 +115,7 @@ In the broker log you can see that the `cleanup.policy` configuration has been h
 [2021-01-06 12:03:04,184] INFO Creating topic testdata-01 with configuration {cleanup.policy=compact} and initial partition assignment HashMap(0 -> ArrayBuffer(1), 1 -> ArrayBuffer(1), 2 -> ArrayBuffer(1), 3 -> ArrayBuffer(1)) (kafka.zk.AdminZkClient)
 ----
 
-But! Alas! the connector fails: 
+**🤯 ☠️ 💀 But, alas! The connector fails: **
 
 [source,bash]
 ----
@@ -165,6 +165,73 @@ Topic: testdata-02      PartitionCount: 4       ReplicationFactor: 1    Configs:
         Topic: testdata-02      Partition: 1    Leader: 1       Replicas: 1     Isr: 1
         Topic: testdata-02      Partition: 2    Leader: 1       Replicas: 1     Isr: 1
         Topic: testdata-02      Partition: 3    Leader: 1       Replicas: 1     Isr: 1
+----
+
+== Bonus - doing it through ksqlDB
+
+image::/images/2021/01/topgun.gif[]
+
+ksqlDB can be used to create Kafka Connect connectors, either against an existing Kafka Connect cluster or using ksqlDB's embedded Connect worker. Here's an example of creating a connector that overrides the `min.insync.replicas`, partition count, and replication factor for a created topic: 
+
+[source,sql]
+----
+                  ===========================================
+                  =       _              _ ____  ____       =
+                  =      | | _____  __ _| |  _ \| __ )      =
+                  =      | |/ / __|/ _` | | | | |  _ \      =
+                  =      |   <\__ \ (_| | | |_| | |_) |     =
+                  =      |_|\_\___/\__, |_|____/|____/      =
+                  =                   |_|                   =
+                  =  Event Streaming Database purpose-built =
+                  =        for stream processing apps       =
+                  ===========================================
+
+Copyright 2017-2020 Confluent Inc.
+
+CLI v0.14.0-rc732, Server v0.14.0-rc732 located at http://ksqldb:8088
+Server Status: RUNNING
+
+Having trouble? Type 'help' (case-insensitive) for a rundown of how things work!
+
+ksql> CREATE SOURCE CONNECTOR SOURCE_TXT_FILE_03 WITH (
+        'connector.class'                            = 'org.apache.kafka.connect.file.FileStreamSourceConnector',
+        'key.converter'                              = 'org.apache.kafka.connect.storage.StringConverter',
+        'value.converter'                            = 'org.apache.kafka.connect.storage.StringConverter',
+        'topic'                                      = 'testdata-03',
+        'file'                                       = '/data/test.txt',
+        'topic.creation.default.partitions'          = 4,
+        'topic.creation.default.replication.factor'  = 1,
+        'topic.creation.default.min.insync.replicas' = 1
+      );
+
+ Message
+--------------------------------------
+ Created connector SOURCE_TXT_FILE_03
+--------------------------------------
+
+ksql> SHOW TOPICS;
+
+ Kafka Topic                           | Partitions | Partition Replicas
+-------------------------------------------------------------------------
+ testdata-04                           | 4          | 1
+-------------------------------------------------------------------------
+
+ksql> PRINT 'testdata-04' FROM BEGINNING;
+Key format: ¯\_(ツ)_/¯ - no data processed
+Value format: KAFKA_STRING
+rowtime: 2021/01/06 14:09:27.522 Z, key: <null>, value: Hello world!
+----
+
+Topic details: 
+
+[source,bash]
+----
+kafka-topics --bootstrap-server broker:29092  --topic testdata-03 --describe
+Topic: testdata-03      PartitionCount: 4       ReplicationFactor: 1    Configs: min.insync.replicas=1
+        Topic: testdata-03      Partition: 0    Leader: 1       Replicas: 1     Isr: 1
+        Topic: testdata-03      Partition: 1    Leader: 1       Replicas: 1     Isr: 1
+        Topic: testdata-03      Partition: 2    Leader: 1       Replicas: 1     Isr: 1
+        Topic: testdata-03      Partition: 3    Leader: 1       Replicas: 1     Isr: 1
 ----
 
 == Topic Creation Groups
