Fix a bunch of broken links

--- a/content/post/smt10_replace.adoc
+++ b/content/post/smt10_replace.adoc
@@ -57,7 +57,7 @@ docker exec kafkacat kafkacat -b broker:29092 -r http://schema-registry:8081 -s 
 }
 ----
 
-This data is in Kafka, but the system to which we're going to stream it with a sink connector mustn't hold sensitive information, such as credit card data. One option is to link:day5.adoc[`Mask`] it, but this retains the fields in the payload which is wasteful if we simply don't want them in the target system. We can use `ReplaceField` to exclude a set of fields from passing through Kafka Connect: 
+This data is in Kafka, but the system to which we're going to stream it with a sink connector mustn't hold sensitive information, such as credit card data. One option is to link:/2020/12/14/twelve-days-of-smt-day-5-maskfield/[`Mask`] it, but this retains the fields in the payload which is wasteful if we simply don't want them in the target system. We can use `ReplaceField` to exclude a set of fields from passing through Kafka Connect: 
 
 [source,bash]
 ----
