--- a/content/post/smt11_filter.adoc
+++ b/content/post/smt11_filter.adoc
@@ -78,7 +78,7 @@ Our esteemed data engineers have determined that in these two systems `cost` is 
 
 With Kafka Connect and Single Message Transform we can stream this data to a single harmonious home downstream from one connector. This is enabled through two Single Message Transform: 
 
-1. _Conditionally_ link:day10.adoc[modifying the field names]
+1. _Conditionally_ link:/2020/12/21/twelve-days-of-smt-day-10-replacefield/[modifying the field names]
 ** The transform includes the `predicate` property (`"transforms.renameSystemBFields.predicate": "isSystemBTopic"`) which resolves to the `predicates.isSystemBTopic` configuration. 
 ** Predicate configuration follows a similar pattern to transforms; `predicate` prefix, followed by a label (`isSystemBTopic`), a `type` (`org.apache.kafka.connect.transforms.predicates.TopicNameMatches`) and then additional configuration properties as required by the particular predicate being used. 
 2. Renaming the topic (and thus target table name) for _all_ messages to `transactions`. 
