--- a/content/post/smt12_community.adoc
+++ b/content/post/smt12_community.adoc
@@ -63,9 +63,9 @@ A nice little triumvirate of transformations here, which use the _timestamp in a
 
 The three steps are: 
 
-1. link:day8.adoc[TimestampConverter] to transform the field from a string to a Timestamp (not necessary if it already is). _Ships with Apache Kafka._
+1. link:/2020/12/17/twelve-days-of-smt-day-8-timestampconverter/[TimestampConverter] to transform the field from a string to a Timestamp (not necessary if it already is). _Ships with Apache Kafka._
 2. https://jcustenborder.github.io/kafka-connect-documentation/projects/kafka-connect-transform-common/transformations/ExtractTimestamp.html[ExtractTimestamp] to set the timestamp of the Kafka message to the value of the specified field. _Custom SMT from Jeremy Custenborder_.
-3. link:day7.adoc[TimestampRouter] to modify the topic name to include the timestamp components required. _Ships with Apache Kafka._
+3. link:/2020/12/16/twelve-days-of-smt-day-7-timestamprouter/[TimestampRouter] to modify the topic name to include the timestamp components required. _Ships with Apache Kafka._
 
 [source,javascript]
 ----
