--- a/content/post/smt1_insertfield_ts.adoc
+++ b/content/post/smt1_insertfield_ts.adoc
@@ -110,7 +110,7 @@ mysql> select * from transactions limit 5;
 ----
 
 
-_See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 link:../kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 link:../kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_
+_See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_
 
 == Example - S3 Sink connector
 
@@ -156,7 +156,7 @@ This writes messages as JSON to S3 that look like this:
 ----
 
 
-_See also 🎥 https://rmoff.dev/kafka-s3-video[Kafka Connect in Action : S3 Sink] (👾 link:../kafka-to-s3[`kafka-to-s3 demo code`])_
+_See also 🎥 https://rmoff.dev/kafka-s3-video[Kafka Connect in Action : S3 Sink] (👾 https://github.com/confluentinc/demo-scene/tree/master/kafka-to-s3[`kafka-to-s3 demo code`])_
 
 
 == Try it out!
