--- a/content/post/smt4_regex.adoc
+++ b/content/post/smt4_regex.adoc
@@ -73,7 +73,7 @@ Many sink connectors will use the topic name as the basis for the naming of the 
 
 You can use the `RegExRouter` to customise the name of the object that sink connectors that follow this pattern will write to. 
 
-Here's an example of streaming data to MySQL, using the https://www.confluent.io/hub/confluentinc/kafka-connect-jdbc[JDBC sink connector]. _(See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 link:../kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 link:../kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_
+Here's an example of streaming data to MySQL, using the https://www.confluent.io/hub/confluentinc/kafka-connect-jdbc[JDBC sink connector]. _(See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_
 
 We're going to read data from a topic called `day4-transactions`: 
 
