--- a/content/post/smt5_mask.adoc
+++ b/content/post/smt5_mask.adoc
@@ -154,7 +154,7 @@ $ docker exec kafkacat kafkacat -b broker:29092 -r http://schema-registry:8081 -
 
 👉 https://www.confluent.io/hub/confluentinc/kafka-connect-jdbc
 
-_See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 link:../kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 link:../kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_
+_See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_
 
 Here we're going to stream the data from that topic above (`day5-01-person`) to MySQL, with the assumption that whilst the owner of the Kafka topic is permitted to hold a user's full address, the owner of the database to which we're streaming the data is not, and thus will mask it out at egress: 
 
