--- a/content/post/smt7_timestamprouter.adoc
+++ b/content/post/smt7_timestamprouter.adoc
@@ -70,7 +70,7 @@ mysql> show tables;
 +-------------------------------+
 ----
 
-Reference: _https://www.confluent.io/hub/confluentinc/kafka-connect-jdbc[JDBC sink connector], see also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 link:../kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 link:../kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_
+Reference: _https://www.confluent.io/hub/confluentinc/kafka-connect-jdbc[JDBC sink connector], see also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_
 
 == What about using a timestamp value from the message itself? 
 
