--- a/content/post/smt8_timestampconverter.adoc
+++ b/content/post/smt8_timestampconverter.adoc
@@ -78,7 +78,7 @@ $ curl -s "http://localhost:8081/subjects/day8-transactions-value/versions/lates
 […]      
 ----
 
-This means that when the data is used by a consumer, such as a Kafka Connect sink, it's still handled as a string with the result that the target object type will usually inherit the same. Here's an example of the https://www.confluent.io/hub/confluentinc/kafka-connect-jdbc[JDBC sink connector] (_See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 link:../kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 link:../kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_):
+This means that when the data is used by a consumer, such as a Kafka Connect sink, it's still handled as a string with the result that the target object type will usually inherit the same. Here's an example of the https://www.confluent.io/hub/confluentinc/kafka-connect-jdbc[JDBC sink connector] (_See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])_):
 
 [source,javascript]
 ----
@@ -336,7 +336,7 @@ If you have timestamp in unix epoch (bigint) as the source, you can use `Timesta
 
 == Accessing timestamps in nested fields
 
-Unfortunately the `TimestampConverter` only works on root-level elements; it can't be used on timestamp fields that are nested in other fields. You'd need to either use link:day3.adoc[`Flatten`] first, or write your own transformation. 
+Unfortunately the `TimestampConverter` only works on root-level elements; it can't be used on timestamp fields that are nested in other fields. You'd need to either use link:/2020/12/10/twelve-days-of-smt-day-3-flatten/[`Flatten`] first, or write your own transformation. 
 
 
 == Try it out!
