--- a/content/post/smt6_insertfield2.adoc
+++ b/content/post/smt6_insertfield2.adoc
@@ -91,7 +91,7 @@ docker exec kafkacat kafkacat -b broker:29092 -r http://schema-registry:8081 -s 
 
 👉 https://www.confluent.io/hub/confluentinc/kafka-connect-jdbc
 
-See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 link:../kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 link:../kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])
+See also 🎥 https://rmoff.dev/kafka-jdbc-video[Kafka Connect in Action : JDBC Sink] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/README.adoc[`demo code`]) and 🎥 https://rmoff.dev/ksqldb-jdbc-sink-video[ksqlDB & Kafka Connect JDBC Sink in action] (👾 https://github.com/confluentinc/demo-scene/blob/master/kafka-to-database/ksqldb-jdbc-sink.adoc[`demo code`])
 
 It can often be useful to add information about the Kafka message (topic, partition, offset) when the data is sent to a target system. Here's an example using the above topic, with another static field added in for good measure. You can also add the timestamp of the Kafka message, link:/2020/12/08/twelve-days-of-smt-day-1-insertfield-timestamp/[as shown previously].
 
