Fix SQL and change image

--- a/content/post/ksqldb-howto.adoc
+++ b/content/post/ksqldb-howto.adoc
@@ -2,7 +2,7 @@
 draft: false
 title: '📼 ksqlDB HOWTO - A mini video series 📼'
 date: "2021-02-17T23:12:33Z"
-image: "/images/2021/02/IMG_8926.jpeg"
+image: "/images/2021/02/ksqldb-howto.jpg"
 thumbnail: "/images/2021/02/IMG_8916.jpeg"
 credit: "https://twitter.com/rmoff/"
 categories:
@@ -34,7 +34,7 @@ CREATE STREAM ORDERS_NY AS
    WHERE ADDRESS_STATE='New York';
 ----
 
-== S01E02 : Schema Manipulation
+== S01E02 : Schema Manipulation and Data Transformation
 
 {{< youtube 7pH5KEQiYYo >}}
 
@@ -52,7 +52,7 @@ For example:
 ----
 CREATE STREAM ORDERS_PROCESSED AS
   SELECT TIMESTAMPTOSTRING(ROWTIME,'yyyy-MM-dd HH:mm:ss','Europe/London') AS ORDER_TS, 
-         CAST(ORDER_VALUE AS DECIMAL(9,2)),
+         CAST(ORDER_VALUE AS DECIMAL(9,2)) AS ORDER_VALUE_USD,
          ORDER->ADDRESS AS ADDRESS
     FROM ORDERS;
 ----
