Fix title code format

--- a/content/post/jq-to-kafkacat-with-keys.adoc
+++ b/content/post/jq-to-kafkacat-with-keys.adoc
@@ -1,5 +1,5 @@
 ---
-title: 'Setting key value when piping from `jq` to `kafkacat`'
+title: 'Setting key value when piping from jq to kafkacat'
 date: "2020-09-30T20:54:09+01:00"
 image: "/images/2020/09/IMG_6875.jpeg"
 thumbnail: "/images/2020/09/IMG_6880.jpeg"
