--- a/content/post/csv-into-kafka-dirty.adoc
+++ b/content/post/csv-into-kafka-dirty.adoc
@@ -305,3 +305,16 @@ ksql> SELECT * FROM data02 EMIT CHANGES LIMIT 3;
 Limit Reached
 Query terminated
 ----
+
+== Other suggestions
+
+A couple of useful suggestions in response to this post, from Simon Aubury: 
+
+{{< twitter 1365480667589435393 >}}
+
+and from `edbond`
+
+++++
+<a class="embedly-card" href="https://www.reddit.com/r/apachekafka/comments/ltbkkn/loading_delimited_data_into_kafka_quick_dirty_but/gp5dtq6">Card</a>
+<script async src="//embed.redditmedia.com/widgets/platform.js" charset="UTF-8"></script>
+++++
