Add link to post

--- a/content/post/bash_group_by.adoc
+++ b/content/post/bash_group_by.adoc
@@ -18,6 +18,8 @@ categories:
 
 _One of the fun things about working with data over the years is learning how to use the tools of the day—but also learning to fall back on the tools that are always there for you - and one of those is bash and its wonderful library of shell tools._
 
+NOTE: There's an even better way than I've described here, and it's called `visidata`. link:/2021/03/04/quick-profiling-of-data-in-apache-kafka-using-kafkacat-and-visidata/[I've written about it more over here].
+
 I've been playing around with a new data source recently, and needed to understand more about its structure. Within a single stream there were multiple message types.
 
 <!--more-->
